Fix blurred photo increasing page width on individual photo view

--- a/client/stylesheets/sass/_photo.scss
+++ b/client/stylesheets/sass/_photo.scss
@@ -12,6 +12,7 @@
   -webkit-filter: blur(80px);
   -ms-filter: blur(80px);
   filter: blur(80px);
+  position: fixed;
   z-index: -1;
 }
 
